# cybervision_ws

./: README.md
doc/: CyberVision 边缘感知与三维数字孪生系统 - 详细需求文档.md
doc/问题/: Build_Commands_Guide.md  Final_Integration_Test_Summary.md  Performance_Test_Report.md  Real_Scene_Test_Report.md  TensorRT10_Migration_Summary.md  osg_render_problem_summary.md  双缓冲区数据流问题排查与解决.md
src/cybervision_edge/: CMakeLists.txt  PROJECT_STRUCTURE.txt  QUICKSTART.md  package.xml
src/cybervision_edge/doc/: osg 帧率过低问题修复总结.md  帧率配置与修改问题总结.md
src/cybervision_edge/include/: camera_model.hpp  double_buffer.hpp  gpu_memory_monitor.hpp  osg_renderer.hpp  performance_monitor.hpp  qos_profiles.hpp  qt_gui.hpp  trt_engine.hpp  video_streamer.hpp
src/cybervision_edge/install/: local_setup.sh  setup.sh
src/cybervision_edge/launch/: cybervision.launch.py
src/cybervision_edge/log/: latest_build
src/cybervision_edge/milestone_reports/: milestone_4_osg_qt_rendering.md
src/cybervision_edge/scripts/: build_and_test.sh  build_engine.sh
src/cybervision_edge/src/infer_node/: camera_model.cpp  gpu_memory_monitor.cpp  main.cpp  performance_monitor.cpp  test_node.cpp  trt_engine.cpp  video_streamer.cpp
src/cybervision_edge/src/render_node/: double_buffer.cpp  main.cpp  osg_renderer.cpp  perception_subscriber.cpp  qt_gui.cpp
src/cybervision_edge/tools/: dds_latency_test.cpp
src/cybervision_interfaces/: CMakeLists.txt  package.xml
src/cybervision_interfaces/msg/: DetectedObject3D.msg  PerceptionResult.msg
